--- a/Revisao/composer.json
+++ b/Revisao/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "vlucas/phpdotenv": "^5.6"
+        "vlucas/phpdotenv": "^5.6",
+        "u01jmg3/ics-parser": "^3.4"
     }
 }
