--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "fs": "^0.0.1-security",
     "mammoth": "^1.9.0",
     "mysql2": "^3.12.0",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "simple-git": "^3.27.0"
   }
 }
