--- a/.github/workflows/generate_changelog.yaml
+++ b/.github/workflows/generate_changelog.yaml
@@ -23,6 +23,6 @@ jobs:
       run: |
         git config user.name "github-actions[bot]"
         git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-        git add ./CHANGELOG.md
+        git add CHANGELOG.md
         git commit -m "🔖 Update CHANGELOG.md for $GITHUB_REF"
         git push
