--- a/Revisao/composer.json
+++ b/Revisao/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "vlucas/phpdotenv": "^5.6",
-        "u01jmg3/ics-parser": "^3.4"
+        "u01jmg3/ics-parser": "^3.4",
+        "phpseclib/phpseclib": "^3.0"
     }
 }
