fix: alterações no arquivos

--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "mysql2": "^3.12.0",
     "node-fetch": "^3.3.2",
     "simple-git": "^3.27.0"
+  },
+  "devDependencies": {
+    "jest": "^30.2.0"
   }
 }
