--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "phpseclib/phpseclib": "^3.0",
-        "predis/predis": "^3.3"
+        "predis/predis": "^3.3",
+        "dompdf/dompdf": "2.0"
     }
 }
