--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mammoth": "^1.9.0",
     "mysql2": "^3.12.0",
     "node-fetch": "^3.3.2",
+    "pdfjs-dist": "^3.11.174",
     "simple-git": "^3.27.0"
   },
   "devDependencies": {
