Update dompdf to version 3.1 and refactor related dependencies
- Updated the dompdf package from version 2.0 to 3.1 in composer.json and composer.lock.
- Refactored autoload paths for php-font-lib and php-svg-lib to point to the new dompdf package locations.
- Removed deprecated phenx/php-font-lib and phenx/php-svg-lib dependencies.
- Added new dependencies: dompdf/php-font-lib and dompdf/php-svg-lib.
- Enhanced the inicio.php file to include contract status checks and modal display for signing contracts.
- Improved error handling in vendor/autoload.php and platform_check.php.
- Updated installed.json and installed.php to reflect the new package versions and references.

--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,6 @@
     "require": {
         "phpseclib/phpseclib": "^3.0",
         "predis/predis": "^3.3",
-        "dompdf/dompdf": "2.0"
+        "dompdf/dompdf": "^3.1"
     }
 }
