--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,8 @@
     "require": {
         "phpseclib/phpseclib": "^3.0",
         "predis/predis": "^3.3",
-        "dompdf/dompdf": "^3.1"
+        "dompdf/dompdf": "^3.1",
+        "setasign/fpdi": "^2.6",
+        "setasign/fpdf": "^1.8"
     }
 }
