Refactor FlowReviewExt paths and update styles
- Updated CSS styles for improved layout and responsiveness in FlowReview.
- Changed sidebar and navigation links to point to FlowReviewExt instead of FlowReview.
- Adjusted cookie handling and session validation logic in auth_login.php and index.php.
- Modified .htaccess to reflect new base path for FlowReviewExt.
- Updated JavaScript functions to accommodate new URL structure for token retrieval.
- Enhanced notification links and sidebar navigation for consistency with new paths.
- Ensured .env loading paths are correct for the new directory structure.

--- a/FlowReviewExt/.htaccess
+++ b/FlowReviewExt/.htaccess
@@ -1,5 +1,5 @@
 RewriteEngine On
-RewriteBase /sistema/FlowReview/
+RewriteBase /sistema/FlowReviewExt/
 
 # /UUID
 RewriteRule ^([0-9a-fA-F-]+)$ index.php?token=$1 [L,QSA]
